--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,17 @@ name: Build
 on: [push]
 jobs:
   build:
-    name: 'build'
+    name: build
     runs-on: ubuntu-latest
     steps:
-      - name: 'Check out code'
+      - name: "Check out code"
         uses: actions/checkout@v2
-      - name: 'Set up Go'
+      - name: "Set up Go"
         uses: actions/setup-go@v2
         with:
           go-version: 1.17.x
 
-      - name: 'build'
-        run: |
-          go build
+      - name: build
+        run: go build
+      - name: test
+        run: go test
