--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,6 @@ jobs:
         with:
           go-version: 1.17.x
 
-      - name: build
-        run: go build
       - name: test
-        run: go test
+        # Set TERM variable to force coloe ourpur
+        run: go build && TERM=xterm-256color script -q -e -c "go test -v"
