--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,14 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     steps:
-      - name: "Check out code"
+      - name: 'Check out code'
         uses: actions/checkout@v2
-      - name: "Set up Go"
+      - name: 'Set up Go'
         uses: actions/setup-go@v2
         with:
           go-version: 1.17.x
-
       - name: test
         # Set TERM variable to force color output
         run: go build && TERM=xterm-256color script -q -e -c "go test -v"
+      - name: build examples
+        run: ls -d examples/* | xargs sh -c 'cd $0 && go build'
