--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,14 +5,15 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     steps:
-      - name: 'Check out code'
+      - name: "Check out code"
         uses: actions/checkout@v2
-      - name: 'Set up Go'
+      - name: "Set up Go"
         uses: actions/setup-go@v2
         with:
           go-version: 1.18.x
-      - name: test
+      - name: Test
         # Set TERM variable to force color output
-        run: go build && TERM=xterm-256color script -q -e -c "go test -v"
+        # Unset CI var because of https://github.com/muesli/termenv/commit/1111971edffa5f9ed2a38bd57f7e434b424f7b29
+        run: go build && TERM=xterm-256color CI= script -q -e -c "go test -v"
       - name: build examples
         run: ls -d examples/* | xargs sh -c 'cd $0 && go build'
