--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     steps:
-      - name: "Check out code"
+      - name: 'Check out code'
         uses: actions/checkout@v2
-      - name: "Set up Go"
+      - name: 'Set up Go'
         uses: actions/setup-go@v2
         with:
           go-version: 1.18.x
@@ -17,5 +17,9 @@ jobs:
         run: go build && TERM=xterm-256color CI= script -q -e -c "go test -v -coverpkg=./... -coverprofile=coverage.out -covermode=atomic"
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
+        with:
+          files: ./coverage.out
+          verbose: true
+          fail_ci_if_error: true
       - name: build examples
         run: ls -d examples/* | xargs sh -c 'cd $0 && go build'
