--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,7 +9,7 @@ tasks:
       - go install github.com/onsi/ginkgo/v2/ginkgo@latest
   test:
     cmds:
-      - ginkgo ./test -v -race -procs 4
+      - ginkgo -v -race -procs 4 ./test
   covTest:
     cmds:
       - go test ./test -v -race -- -cover
