--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,3 +26,13 @@ jobs:
           files: ./test/coverage.out
           verbose: true
           fail_ci_if_error: true
+  lint:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.18.x
+      - uses: actions/checkout@v3
+      - name: lint
+        uses: golangci/golangci-lint-action@v3
