--- a/Taskfile_linux.yml
+++ b/Taskfile_linux.yml
@@ -6,4 +6,4 @@ tasks:
       - xdg-open ./coverage.html
   examples:
     cmds:
-      - \ls -d examples/*/ | tr '\n' '\0' | xargs -0 -n1 sh -c 'cd $0 && go build -o bin/example $0'
+      - \ls -d examples/*/ | tr '\n' '\0' | xargs -0 -n1 sh -c 'echo building $0 && cd $0 && go build -o bin/example $0'
