add workspace back

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,7 +26,7 @@ tasks:
       - task: os:examples
   update:
     cmds:
-      - go get -u ./...
+      - go get -t -u ./...
       - go mod tidy
-      - cd examples && go get -u ./...
+      - cd examples && go get -t -u ./...
       - cd examples && go mod tidy
