--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,6 +7,9 @@ tasks:
   setup:
     cmds:
       - go install github.com/onsi/ginkgo/v2/ginkgo@latest
+      - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b "$(go env GOPATH)/bin"
+      - echo "Installing git hooks..."
+      - cp .githooks/pre-commit .git/hooks/pre-commit
   test:
     cmds:
       - ginkgo -v -race -p ./test
