remove mod lint for now

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,7 +19,8 @@ linters:
     - gocyclo
     - godot
     - gomnd
-    - gomoddirectives
+    # re-enable once bubbletea is updated
+    # - gomoddirectives
     - goprintffuncname
     # - lll
     - misspell
