--- a/docs/package.json
+++ b/docs/package.json
@@ -17,20 +17,20 @@
   "dependencies": {
     "@docusaurus/core": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
-    "@docusaurus/theme-common": "^2.2.0",
+    "@docusaurus/theme-common": "2.2.0",
     "@easyops-cn/docusaurus-search-local": "^0.33.6",
     "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "prism-react-renderer": "^1.3.5",
+    "clsx": "1.2.1",
+    "prism-react-renderer": "1.3.5",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remark-gfm": "^3.0.1"
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "remark-gfm": "3.0.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
-    "@tsconfig/docusaurus": "^1.0.5",
-    "typescript": "^4.7.4"
+    "@tsconfig/docusaurus": "1.0.6",
+    "typescript": "4.9.4"
   },
   "browserslist": {
     "production": [
@@ -45,6 +45,6 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.12"
   }
 }
