--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,6 +7,7 @@ tasks:
   setup:
     cmds:
       - go install github.com/onsi/ginkgo/v2/ginkgo@latest
+      - go install github.com/princjef/gomarkdoc/cmd/gomarkdoc@latest
       - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b "$(go env GOPATH)/bin"
       - echo "Installing git hooks..."
       - cp .githooks/pre-commit .git/hooks/pre-commit
@@ -17,6 +18,8 @@ tasks:
       - go test ./input/...
   covTest:
     cmds:
+      - go test .
+      - go test ./input/...
       - go test ./test -v -tuicover -tuicoverpkg ../...
   buildCoverage:
     deps: [covTest]
@@ -36,3 +39,51 @@ tasks:
       - go mod tidy
       - cd examples && go get -t -u ./...
       - cd examples && go mod tidy
+  gen-docs:
+    cmds:
+      - |
+        gomarkdoc \
+        --template-file package=./docs/templates/package.gotxt \
+        --template-file text=./docs/templates/text.gotxt \
+        --template-file file=./docs/templates/file.gotxt \
+        --template frontmatter="" \
+        --output ./docs/docs/03-Input/07-API.mdx ./input
+      - |
+        gomarkdoc \
+        --template-file package=./docs/templates/package.gotxt \
+        --template-file text=./docs/templates/text.gotxt \
+        --template-file file=./docs/templates/file.gotxt \
+        --template-file frontmatter=./docs/templates/frontmatter.gotxt \
+        --template slug=/input/simpleinput/api \
+        --output ./docs/docs/03-Input/02-Simple/02-API.mdx ./input/simpleinput
+      - |
+        gomarkdoc \
+        --template-file package=./docs/templates/package.gotxt \
+        --template-file text=./docs/templates/text.gotxt \
+        --template-file file=./docs/templates/file.gotxt \
+        --template-file frontmatter=./docs/templates/frontmatter.gotxt \
+        --template slug=/input/commandinput/api \
+        --output ./docs/docs/03-Input/03-Command/02-API.mdx ./input/commandinput
+      - |
+        gomarkdoc \
+        --template-file package=./docs/templates/package.gotxt \
+        --template-file text=./docs/templates/text.gotxt \
+        --template-file file=./docs/templates/file.gotxt \
+        --template-file frontmatter=./docs/templates/frontmatter.gotxt \
+        --template slug=/input/lexerinput/api \
+        --output ./docs/docs/03-Input/04-Lexer/02-API.mdx ./input/lexerinput
+      - |
+        gomarkdoc \
+        --template-file package=./docs/templates/package.gotxt \
+        --template-file text=./docs/templates/text.gotxt \
+        --template-file file=./docs/templates/file.gotxt \
+        --template-file frontmatter=./docs/templates/frontmatter.gotxt \
+        --template slug=/input/parserinput/api \
+        --output ./docs/docs/03-Input/05-Parser/02-API.mdx ./input/parserinput
+      - |
+        gomarkdoc \
+        --template-file package=./docs/templates/package.gotxt \
+        --template-file text=./docs/templates/text.gotxt \
+        --template-file file=./docs/templates/file.gotxt \
+        --template frontmatter="" \
+        --output ./docs/docs/05-Suggestion/02-API.mdx ./suggestion
