--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -35,10 +35,9 @@ tasks:
       - cd ./docs/examples && go build ./...
   update:
     cmds:
-      - go get -t -u ./...
-      - go mod tidy
-      - cd examples && go get -t -u ./...
-      - cd examples && go mod tidy
+      - go get -t -u ./... && go mod tidy
+      - cd examples && go get -t -u ./... && go mod tidy
+      - cd docs/examples && go get -t -u ./... && go mod tidy
   gen-docs:
     cmds:
       - |
