--- a/docs/package.json
+++ b/docs/package.json
@@ -15,22 +15,23 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
-    "@docusaurus/theme-common": "2.2.0",
-    "@easyops-cn/docusaurus-search-local": "^0.33.6",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "2.3.1",
+    "@docusaurus/preset-classic": "2.3.1",
+    "@docusaurus/theme-common": "2.3.1",
+    "@easyops-cn/docusaurus-search-local": "0.35.0",
+    "@mdx-js/react": "1.6.22",
     "clsx": "1.2.1",
     "prism-react-renderer": "1.3.5",
-    "raw-loader": "^4.0.2",
-    "react": "^18.2.0",
+    "raw-loader": "4.0.2",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "3.0.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0",
-    "@tsconfig/docusaurus": "1.0.6",
-    "typescript": "4.9.4"
+    "@docusaurus/module-type-aliases": "2.3.1",
+    "@tsconfig/docusaurus": "1.0.7",
+    "typescript": "4.9.5",
+    "yarn-upgrade-all": "0.7.2"
   },
   "browserslist": {
     "production": [
