handle border offsets

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -118,3 +118,10 @@ tasks:
         --template-file file=./docs/templates/file.gotxt \
         --template frontmatter="" \
         --output ./docs/docs/03-Prompt/02-API.mdx .
+        - |
+        gomarkdoc \
+        --template-file package=./docs/templates/package.gotxt \
+        --template-file text=./docs/templates/text.gotxt \
+        --template-file file=./docs/templates/file.gotxt \
+        --template frontmatter="" \
+        --output ./docs/docs/10-Searchbar/02-API.mdx ./searchbar
