update test dependencies and fix warnings

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,9 +18,8 @@ linters:
     - goconst
     - gocyclo
     - godot
-    - gomnd
-    # re-enable once bubbletea is updated
-    # - gomoddirectives
+    - mnd
+    - gomoddirectives
     - goprintffuncname
     - lll
     - misspell
