--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Check out code"
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: "Set up Go"
         uses: actions/setup-go@v3
         with:
@@ -21,7 +21,9 @@ jobs:
       - name: build examples
         run: ./bin/task examples
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           files: ./test/coverage.out
           verbose: true
@@ -33,6 +35,6 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.24.x
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: lint
         uses: golangci/golangci-lint-action@v3
